# ABFVisionSiteWeb

ABFVisionSiteWeb/: package-lock.json
ABFVisionSiteWeb/src/components/: Algorithme.tsx  Apropos.tsx  Contact.tsx  SolutionsSection.tsx  Store.tsx  Template.tsx
ABFVisionSiteWeb/src/pages/: Accueil.tsx  LicenceActivate.tsx
Scolarys/: index.html  package.json
Scolarys/backend/: .env  Cargo.toml
Scolarys/backend/migrations/migrations/: 20260409165603_create_table.sql  20260409170200_create_views_triggers_table.sql
Scolarys/src/: App.tsx  types.ts
Scolarys/src/components/: Algorithme.tsx  Apropos.tsx  Contact.tsx  SolutionsSection.tsx  Store.tsx  TemplatesSection.tsx
Scolarys/src/pages/: Accueil.tsx  AuthPage.tsx  LicenceActivate.tsx
