[package]
name = "backend"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = "0.7"
tokio = { version = "1", features = ["full"] }

serde = { version = "1", features = ["derive"] }
serde_json = "1"

sqlx = { version = "0.7", features = ["postgres", "runtime-tokio", "macros"] }

dotenvy = "0.15"

tower-http = { version = "0.5", features = ["cors"] }

argon2 = "0.5"

uuid = { version = "1", features = ["v4", "serde"] }

# 📅 Dates
chrono = { version = "0.4", features = ["serde"] }

validator = { version = "0.16", features = ["derive"] }

jsonwebtoken = "9"

rand = "0.8"